src/ui/src/variables.scss
// Taken from https://material-ui.com/customization/breakpoints/
$sm-breakpoint: 600px;
$md-breakpoint: 960px;
$lg-breakpoint: 1280px;

$sm-gutter: 10px;

$black: #030000;
$dark-gray: #151313;

// Updated high-contrast colors
$blue: lighten(#2278ff, 20%); // Lighter blue
$red: lighten(#fe0400, 20%);  // Lighter red
$orange: lighten(#ffa500, 10%); // Lighter orange
$white: white; // Keep white as is

$wood: #125d1c;
$brick: #cc03009a;
$wheat: #fac60cda;
$sheep: #6fba7f;
$darker-sheep: #3d8d4e;
$ore: #616166;

